--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table>
     <tr>
-      <td><img src="images/lucaandi.png" alt="Luca and I"></td>
+      <td><img src="Images/lucaandi.png" alt="Luca and I"></td>
       <td>
         <h1>Jeffrey Smith</h1>
         <p><em><a href="https://www.qualitytool.com/">Lead welder</a> and future <strong>web developer</strong></em></p>
