--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <td>
         <h1>Jeffrey Smith</h1>
         <p><em><a href="https://www.qualitytool.com/">Lead welder</a> and future <strong>web developer</strong></em></p>
-        <p>I am currently an welder that is working on becoming an computer genius</p>
+        <p>I am currently a welder that is working on becoming a computer genius</p>
       </td>
     </tr>
   </table>
