--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <td>⭐⭐⭐⭐⭐</td>
     </tr>
     <tr>
-      <td>positive attitude</td>
+      <td>Positive attitude</td>
       <td>⭐⭐⭐⭐⭐</td>
     </tr>
   </table>
